# mle-runtime

./: .gitignore  BUILD_AND_DEPLOY.md  CHANGELOG.md  DEPLOYMENT.md  FINAL_DEPLOYMENT_SUMMARY.md  LICENSE  MANIFEST.in  PROJECT_OVERVIEW.md  QUICKSTART.md  README_SDK.md  TEST_RESULTS_SUMMARY.md  build-all.ps1  build-deployable.ps1  build-python-sdk.ps1  debug_binary.py  pyproject.toml  quick_test.py  readme.md  rebuild-all.ps1  requirements.txt  setup.py  setup.sh  simple_mle_test.py  test_results.txt  verify-sdks.ps1
.github/workflows/: README.md  ci.yml  release.yml
bindings/node/: binding.gyp  package.json
bindings/node/examples/: test.js
bindings/node/src/: bindings.cpp
bindings/python/: requirements.txt  setup.py
bindings/python/examples/: run_inference.py
bindings/python/src/: bindings.cpp
bindings/python/tests/: test_e2e.py
comprehensive_analysis/: 01_project_overview.md  02_mathematical_implementation.md  03_workflow_analysis.md  04_tech_stack_decisions.md  05_core_vs_surface_logic.md  06_research_and_comparisons.md  07_real_world_use_cases.md  08_performance_benchmarks.md  README.md
cpp_core/: CMakeLists.txt  Dockerfile.gpu  test_comprehensive.cpp  test_new_ops_simple.cpp
cpp_core/docs/: FILE_FORMAT_V2.md  OPERATORS_V2.md
cpp_core/include/: caching.h  compression.h  executor.h  loader.h  mle_format.h  security.h  versioning.h
cpp_core/src/: compression.cpp  cuda_context.cpp  engine.cpp  loader.cpp  ops_cpu.cpp  security.cpp  security_simple.cpp
cpp_core/tests/: test_all_operators.cpp  test_engine.cpp  test_enhanced_features.cpp  test_format_v2.cpp  test_loader.cpp  test_new_ops.cpp  test_operators_v2.cpp  test_ops.cpp
docs/: API_REFERENCE.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs+scripts/: build-python-sdk.sh  setup.ps1
examples/: README.md  complete_workflow.py  example_model.mle  iris_mlp_model.mle  iris_model.mle  test_iris_decision_tree.py  test_iris_sklearn.py  test_mle_runtime.py
mle_runtime/: __init__.py  core.py  mle_runtime.py
mle_runtime/exporters/: __init__.py  pytorch_exporter.py  sklearn_exporter.py  tensorflow_exporter.py  universal.py  xgboost_exporter.py
sdk/: INSTALLATION.md  QUICKSTART.md  README.md
sdk/cpp/: CMakeLists.txt  README.md
sdk/cpp/examples/: CMakeLists.txt  simple_inference.cpp
sdk/cpp/include/: mle_client.h
sdk/cpp_core/include/: compression.h  engine.h  executor.h  mle_format.h
sdk/cpp_core/src/: engine.cpp  executor.cpp  loader.cpp  ops_cpu.cpp  ops_cuda.cu
sdk/java/: .gitignore  README.md  deploy.ps1  deploy.sh  pom.xml
sdk/java/examples/: SimpleInference.java  SpringBootServer.java
sdk/java/src/main/java/com/mle/runtime/: Device.java  MLEEngine.java  MLEException.java  ModelMetadata.java  package-info.java
sdk/java/src/test/java/com/mle/runtime/: MLEEngineTest.java
sdk/nodejs/: .npmignore  BUILD_SUCCESS.md  README.md  deploy.ps1  deploy.sh  mlengine-runtime-1.0.1.tgz  package-pure.json  package.json  tsconfig.json
sdk/nodejs/examples/: express_server.js  simple_inference.js
sdk/nodejs/src/: index.ts
sdk/python/: CHANGELOG.md  MANIFEST.in  README.md  SUPPORTED_MODELS.md  build-deployable.ps1  build-deployable.sh  deploy.ps1  deploy.sh  pyproject.toml  requirements.txt  setup.py
sdk/python/examples/: flask_server.py  simple_inference.py
sdk/python/mle_runtime/: __init__.py  engine.py  pytorch_to_mle.py  sklearn_to_mle.py  universal_exporter.py
sdk/python/src/: bindings_sdk.cpp
sdk/python/src/cpp_core/include/: engine.h  loader.h  mle_format.h  security.h  tensor_view.h
sdk/python/src/cpp_core/src/: engine.cpp  executor.cpp  loader.cpp
sdk/python/tests/: test_engine.py
test/: debug_mle_file.py  debug_optype.py  debug_sgd_binary.py  debug_sgd_mlp.py  debug_sgd_multiclass.py  debug_sgd_training.py  test_all_models.py  test_binary_fix.py  test_optype_enum.py  test_sigmoid_softmax.py  test_sklearn_debug.py  test_supported_models.py  test_working_models.py
tests/: test_comprehensive_algorithms.py  test_deployed_module.py
tools/benchmarks/: mle_vs_joblib.py
tools/cli/: aimodule.py
tools/exporter/: MANIFEST.in  README.md  pyproject.toml  pytorch_to_mle.py  setup.py  sklearn_to_mle.py  tensorflow_to_mle.py  test_all_exporters.py  xgboost_to_mle.py
tools/tests/: integration_test.py
