[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mle-runtime"
version = "1.0.1"
description = "Fast ML inference runtime - 10-100x faster than joblib"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Vinay Kamble", email = "vinaykamble289@gmail.com"}
]
keywords = ["machine-learning", "inference", "ml", "ai", "runtime", "mle", "joblib"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/vinaykamble289/mle-runtime"
Documentation = "https://github.com/vinaykamble289/mle-runtime/blob/main/sdk/python/README.md"
Repository = "https://github.com/vinaykamble289/mle-runtime"
Issues = "https://github.com/vinaykamble289/mle-runtime/issues"

[tool.setuptools]
packages = ["mle_runtime"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
